--- a/templates/view_projects.html
+++ b/templates/view_projects.html
@@ -7,9 +7,9 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th><strong>Project Name</strong></th>
-                        <th><strong>Project ID</strong></th>
-                        <th><strong>Doner</strong></th>
+                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Project Name</a></th>
+                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Project ID</a></th>
+                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Doner</a></th>
                         <th><strong>Description</strong></th>
                         {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
                             <th><strong>Action</strong></th>
@@ -37,7 +37,7 @@
                 </tbody>
             </table>
         </div>
-        <a href="{{ url_for('index') }}" class="btn btn-primary" style="justify-content: left;">Home</a>
+        
     </div>
 
     <!-- Pagination -->
