--- a/templates/add_projects.html
+++ b/templates/add_projects.html
@@ -1,33 +1,52 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  
-  <div class="container">
-    
-    <h1 style="text-align: center;">ADD PROJECT</h1>
-    <form method="POST" action="{{ url_for('add_projects') }}">
-      <div class="form-group">
-        <label for="proj_name">Project Name:</label>
-        <input type="text" class="form-control" id="proj_name" name="proj_name" required>
-      </div>
-      <div class="form-group">
-        <label for="doner">Doner:</label>
-        <input type="text" class="form-control" id="doner" name="doner" required>
-      </div>
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <textarea class="form-control" id="description" name="description" required></textarea>
-      </div>
-      <div class="form-group">
-        <label for="is_active">Is Active:</label>
-        <select class="form-control" id="is_active" name="is_active" required>
-          <option value="yes">Yes</option>
-          <option value="no">No</option>
-        </select>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    
-  </div>
-  
+
+<div class="container">
+
+  <h1 style="text-align: center;">ADD PROJECT</h1>
+  <form method="POST" action="{{ url_for('add_projects') }}">
+    <div class="form-group">
+      <label for="proj_name">Project Name:</label>
+      <input type="text" class="form-control" id="proj_name" name="proj_name" placeholder="Enter the name of the project" required>
+    </div>
+    <div class="form-group">
+      <label for="donor">Donor:</label>
+      <input type="text" class="form-control" id="donor" name="donor" placeholder="Enter the name of the donor" required>
+    </div>
+    <div class="form-group">
+      <label for="description">Description:</label>
+      <textarea class="form-control" id="description" name="description" placeholder="Enter the description" required></textarea>
+    </div>
+    <div class="form-group">
+      <label for="is_active">Is Active:</label>
+      <select class="form-control" id="is_active" name="is_active" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+</div>
+
+<script>
+  // JavaScript to hide placeholder text when the input is focused
+  const inputs = document.querySelectorAll('input, textarea');
+
+  inputs.forEach((input) => {
+    const placeholderText = input.getAttribute('placeholder');
+
+    input.addEventListener('focus', () => {
+      input.setAttribute('placeholder', '');
+    });
+
+    input.addEventListener('blur', () => {
+      if (input.value === '') {
+        input.setAttribute('placeholder', placeholderText);
+      }
+    });
+  });
+</script>
+
 {% endblock %}
