--- a/templates/update_projects.html
+++ b/templates/update_projects.html
@@ -9,8 +9,8 @@
       <input type="text" class="form-control" id="proj_name" name="proj_name" value="{{ project.proj_name }}" required>
     </div>
     <div class="form-group">
-      <label for="doner">Doner:</label>
-      <input type="text" class="form-control" id="doner" name="doner" value="{{ project.doner }}" required>
+      <label for="donor">Donor:</label>
+      <input type="text" class="form-control" id="donor" name="donor" value="{{ project.donor }}" required>
     </div>
     <div class="form-group">
       <label for="description">Description:</label>
